--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minhas-financas-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,6 +11,7 @@
     "bootswatch": "^5.0.2",
     "classnames": "^2.3.1",
     "currency-formatter": "^1.5.8",
+    "jsonwebtoken": "^8.5.1",
     "primeicons": "^4.1.0",
     "primereact": "^6.5.0",
     "react": "^17.0.2",
